2005-03-04  Raja R Harinath  <rharinath@novell.com>

	Fix #73282.
	* class.cs (MethodData.Emit): Pass 'container' to
	container.GetObsoleteAttribute instead of 'container.Parent'.

2005-03-03  Marek Safar  <marek.safar@seznam.cz>

	* cs-parser.jay: Add 1534 error test.

	* iterators.cs (Yield.CheckContext): Add error 1629.
	(Iterator.ctor): Save unsafe modifier.
	(MoveNextMethod.DoEmit): Restore unsafe context.

	* namespace.cs (UsingAlias): Better error message.

2005-03-03  Dan Winship  <danw@novell.com>

	* convert.cs (Error_CannotImplicitConversion): fix two bugs in
	the warning message [#73219]

2005-03-03  Raja R Harinath  <rharinath@novell.com>

	Fix compile with MCS 1.0.0.0.
	* cs-tokenizer.cs (PreProcessPragma): Simplify w_disable and
	w_restore to not depend on string constant folding.

2005-03-03  Raja R Harinath  <rharinath@novell.com>

	* decl.cs (DeclSpace.LookupType): Remove 'silent' argument.  Move
	CS0246 check to users who passed 'silent = false'.
	* ecore.cs (TypeLookupExpression.DoResolveAsTypeStep): Add CS0246
	check.
	(SimpleName.SimpleNameResolve): Update.
	* expression.cs (ComposedCast.DoResolveAsTypeStep): Add CS0246 check.
	(MemberAccess.IdenticalNameAndTypeName): Update.
	* doc.cs (FindDocumentedTypeNonArray): Update.

2005-03-03  Raja R Harinath  <rharinath@novell.com>	

	* codegen.cs (EmitContext): Remove ResolvingTypeTree.
	* parameters.cs (ComputeAndDefineParameters): Remove.
	* decl.cs (ResolveBaseTypeExpr): Don't set ResolvingTypeTree.
	* delegate.cs (Define): Don't invoke ComputeAndDefineParameters.
	Use GetParameterInfo.

2005-03-02  Marek Safar  <marek.safar@seznam.cz>

	* report.cs (StaticClass.DefineContainerMembers): Add warning 628.

2005-03-02  Raja R Harinath  <rharinath@novell.com>

	Unify DeclSpace.LookupType and DeclSpace.FindType.
	* decl.cs (DeclSpace.FindNestedType): New virtual function.  This
	is in charge of defining nested types on demand.
	(DeclSpace.LookupType): Use it when the current_type is a